[gd_scene load_steps=8 format=2]

[ext_resource path="res://BFjwi.png" type="Texture" id=1]
[ext_resource path="res://inimigo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]
[ext_resource path="res://kisspng-sprite-tower-defense-isometric-graphics-in-video-g-defense-tower-5b288a53b46aa1.910038161529383507739 (1).png" type="Texture" id=4]
[ext_resource path="res://Button.gd" type="Script" id=5]
[ext_resource path="res://Torremapa.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.4537, 150.443 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511.586, 301.207 )
scale = Vector2( 1.70333, 1.5025 )
texture = ExtResource( 1 )

[node name="Node2D" parent="." instance=ExtResource( 2 )]
position = Vector2( -194.767, 330.521 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 278.962, 105.169 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D2"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="StaticBody2D7" type="StaticBody2D" parent="."]
position = Vector2( 765.82, 208.441 )
scale = Vector2( 1.1, 1 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D7"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 222.541, 263.186 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D3"]
rotation = 1.5708
scale = Vector2( 1, 0.4 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 420.712, 142.6 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D4"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2( 569.712, 432.6 )
scale = Vector2( 1.5, 1 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D5"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2( 698.712, 360.6 )
rotation = 1.5708
scale = Vector2( 0.5, 1 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody2D6"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 426.0
margin_top = 494.0
margin_right = 540.0
margin_bottom = 602.0
icon = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( -26.7618, 328.421 )

[node name="Node2D3" parent="." instance=ExtResource( 2 )]
position = Vector2( -108.076, 328.828 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.034
anchor_top = 0.009
anchor_right = 0.034
anchor_bottom = 0.009
margin_left = -25.1972
margin_top = 0.185785
margin_right = 24.8028
margin_bottom = 50.1858
text = "Vida
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D4" parent="." instance=ExtResource( 6 )]
position = Vector2( -138.593, 4.24264 )

[connection signal="tree_entered" from="." to="." method="_on_Node2D_tree_entered"]
[connection signal="tree_exited" from="Node2D" to="." method="_on_Node2D_tree_exited"]
[connection signal="tree_exiting" from="Node2D" to="." method="_on_Node2D_tree_exiting"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="tree_exited" from="Node2D2" to="." method="_on_Node2D2_tree_exited"]
[connection signal="tree_exiting" from="Node2D2" to="." method="_on_Node2D2_tree_exiting"]
[connection signal="tree_exited" from="Node2D3" to="." method="_on_Node2D3_tree_exited"]
[connection signal="tree_exiting" from="Node2D3" to="." method="_on_Node2D3_tree_exiting"]
[connection signal="ready" from="Node2D4" to="." method="_on_Node2D4_ready"]
